<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".SensorActivity"
    tools:showIn="@layout/activity_sensor">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello here is the Light Meter App!" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:label="@string/maxLuxString"
            android:text="MaxLux: "
            android:id="@+id/maxLux"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lightmeter"
            />

        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:label="@string/currentLuxString"
            android:text="Current Lux: "
            android:id="@+id/currentLux"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/maxLux"
            />

        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:label="@string/readingLuxString"
            android:id="@+id/readingLux"
            android:text="Reading Lux: "
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/currentLux"
             />
        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:label="@string/evString"
            android:id="@+id/evView"
            android:text="EV: "
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/readingLux"
            />
        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:label="@string/kString"
            android:id="@+id/kValue"
            android:text="EV: "
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/evView"
            />
        <Spinner
            android:id="@+id/iso_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/iso_prompt" />
        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iso"
            android:onClick="onButtonDown"
            android:text="CalculateLux" />
        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CalculateEV" />


    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >


        <Spinner
            android:id="@+id/shutterSpeed_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/shutterSpeed_prompt" />
        />

        <Spinner
            android:id="@+id/aperture_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/aperture_prompt" />
        <!--android:entries="@array/aperture_arrays"-->
        <!--<Button
            android:id="@+id/calcKT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iso"
            android:text="Calculate k or t" />-->


    </LinearLayout>


</LinearLayout>
